derive/tests/snapshots/multiple_dsl_attributes/Module/pass_2/count_of_all_modules2.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Count all rows inside the `module2` table.
    pub fn count_of_all_modules2<'a>(&'a self) -> u64 {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().module2().count()
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Count all rows inside the `module2` table.
    pub fn count_of_all_modules2<'a>(&'a self) -> u64 {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().module2().count()
    }
}
